# q2-dada2

./: .copier-answers.yml  .gitignore  Makefile  pyproject.toml
.github/workflows/: python-app.yml
conda-recipe/: meta.yaml
q2_dada2/: __init__.py  _denoise.py  _examples.py  _stats.py  _transformer.py  citations.bib  plugin_setup.py
q2_dada2/_dada_stats/: __init__.py  _visualizer.py
q2_dada2/_dada_stats/assets/: index.html
q2_dada2/assets/: run_dada.R
q2_dada2/tests/: test_denoise.py  test_stats.py
