[project]
name = "q2-dada2"
authors = [
    { name = "Greg Caporaso and Benjamin Callahan", email = "gregcaporaso@gmail.com" }
]
description = "Apply DADA2 to generate denoised sequence variants."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dynamic = ["version"]

[project.urls]
Homepage = "https://qiime2.org"
Repository = "https://github.com/qiime2/q2-dada2"

[project.entry-points.'qiime2.plugins']
"q2-dada2" = "q2_dada2.plugin_setup:plugin"

[build-system]
requires = [
    "setuptools",
    "versioningit",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git-archive"
describe-subst = "$Format:%(describe)$"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "q2_dada2/_version.py"

[tool.setuptools]
include-package-data = true
script-files = [
    "q2_dada2/assets/run_dada.R"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["q2_dada2*"]

[tool.setuptools.package-data]
q2_dada2 = ["**/*"]
